src/test/resources/typeSystemTestModels/valid/classes/NonAbstractClassImplementsAllAbstractMethods.java
package typeSystemTestModels.valid.classes;

public abstract class NonAbstractClassImplementsAllAbstractMethods extends ClassCanOnlyExtendClass {


}