src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/CaptureExample.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

//public class CaptureExample<E, F extends E>  extends Box<F>{

  public class CaptureExample<E, F extends E>  extends Box<F>{
}